--- a/BoardDealerWebApp/appsettings.json
+++ b/BoardDealerWebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=BoardApp;Trusted_Connection=True;"
+  }
 }
